chrome/skin/classic/shared/debugger.css
/* See license.txt for terms of usage */

/******************************************************************************/
/* Sources Panel */

.theme-firebug #sources-pane > tabs {
  display: none;
}

.theme-firebug #sources-pane .dbg-source-item {
  padding: 0;
  padding-left: 17px;
}

.theme-firebug #sources-pane .side-menu-widget-item-contents {
  padding: 2px;
}

.theme-firebug #sources-pane .side-menu-widget-item :-moz-any(label, hbox) {
  cursor: pointer;
}

.theme-firebug #sources-pane .side-menu-widget-group-title {
  border-bottom: none;
  margin: 0;
  padding: 2px 4px;
  background: #F0F0F0 linear-gradient(to top, rgba(0, 0, 0, 0.1), transparent) repeat-x;
  font-size: inherit;
  font-weight: bold;
  color: black;
  cursor: pointer;
}

.theme-firebug #sources-pane .side-menu-widget-group-title label {
  padding-left: 17px;
  background-image: url("chrome://firebug/skin/twistyOpen.svg");
  background-position: 0 calc(0.5em - 3px);
  background-size: 11px 11px;
  background-repeat: no-repeat;
  cursor: pointer;
}

/******************************************************************************/
/* Sources Panel Breakpoints */

.theme-light .side-menu-widget-item .side-menu-widget-item-other {
  background-color: white;
}

.theme-light .side-menu-widget-item.selected .side-menu-widget-item-other {
  background-color: white;
}

.theme-light .side-menu-widget-item.selected .side-menu-widget-item-other {
  background-color: white;
}

.theme-firebug #sources-pane .dbg-breakpoint {
  padding: 0;
  padding-left: 27px;
}

.theme-light .side-menu-widget-item.selected .side-menu-widget-item-other.selected {
  background-color: rgba(255, 255, 255, 0.8);
  color: rgb(24, 25, 26);
}

.theme-firebug #sources-pane .dbg-breakpoint:last-child {
  padding-bottom: 3px;
}

.theme-firebug #sources-pane .dbg-breakpoint-text {
  color: rgb(0, 100, 0);
  font-style: normal;
}

/******************************************************************************/
/* Breakpoint Checkbox */

.theme-firebug #sources-pane .dbg-breakpoint-checkbox .checkbox-check {
  -moz-appearance: none;
  border: none;
  background: url("chrome://firebug/skin/breakpoint.svg") no-repeat 50% 50%;
}

.theme-firebug #sources-pane .dbg-breakpoint-checkbox:not([checked="true"]) > .checkbox-check,
.theme-firebug #sources-pane .dbg-breakpoint-checkbox:not([checked="true"]) ~ * {
  opacity: 0.5;
}

.theme-firebug #sources-pane .dbg-breakpoint-checkbox[checked="true"] > .checkbox-check {
  -moz-appearance: none;
  border: none;
  background: url("chrome://firebug/skin/breakpoint.svg") no-repeat 50% 50%;
}

.theme-firebug #sources-pane .dbg-breakpoint-checkbox {
  padding-right: 0;
  margin-right: 0;
}

/******************************************************************************/
/* Sources toolbar */

.theme-firebug #black-box {
  list-style-image: url(blackBox.svg);
}

.theme-firebug #pretty-print {
  list-style-image: url(prettyPrint.svg);
}

.theme-firebug #toggle-breakpoints {
  list-style-image: url(toggleBreakpoints.svg);
}

.theme-firebug #toggle-breakpoints[checked] {
}

.theme-firebug #sources-toolbar .devtools-toolbarbutton:not([label]) {
  -moz-image-region: rect(0px,16px,16px,0px);
}

.theme-firebug #sources-toolbar .devtools-toolbarbutton:not([label])[checked] {
  -moz-image-region: rect(0px,16px,16px,0px);
  filter: url(chrome://firebug/skin/filters.svg#brightenedGrayscale);
}

/* Debugger unblackbox button */

.theme-firebug #black-boxed-message-button > .button-box > .button-icon {
  background-image: url(blackBox.svg);
  background-size: 16px 16px;
  -moz-margin-end: 0;
}

/******************************************************************************/
/* Toolbar controls */

.theme-firebug #debugger-toolbar .devtools-toolbarbutton:not([label]) > .toolbarbutton-icon,
.theme-firebug #sources-toolbar .devtools-toolbarbutton:not([label]) > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}

.theme-firebug #resume {
  list-style-image: url(chrome://firebug/skin/pause.svg);
  -moz-image-region: auto;
}

.theme-firebug #resume[checked] {
  list-style-image: url(chrome://firebug/skin/continue.svg);
}

.theme-firebug #resume ~ toolbarbutton {
  transition: opacity 0.15s ease-in-out;
}

.theme-firebug #resume:not([checked]) ~ toolbarbutton {
  opacity: 0.5;
}

.theme-firebug #step-over {
  list-style-image: url(chrome://firebug/skin/stepOver.svg);
}

.theme-firebug #step-in {
  list-style-image: url(chrome://firebug/skin/stepInto.svg);
}

.theme-firebug #step-out {
  list-style-image: url(chrome://firebug/skin/stepOut.svg);
}

.theme-firebug #instruments-pane-toggle,
.theme-firebug #debugger-options {
  display: none;
}

/******************************************************************************/
/* Variables Panel */

/* Overwrite widget.css for issue #229 */
.theme-firebug .variables-view-scope {
  -moz-user-focus: ignore;
}

/******************************************************************************/
/* Callstack Panel */

.theme-firebug #callstack-list {
  font-family: Lucida Grande, Tahoma, sans-serif;
  font-size: 11px;
}

.theme-firebug #callstack-list .dbg-classic-stackframe-title {
  color: blue;
  font-weight: normal;
  font-family: monospace;
}

.theme-firebug #callstack-list .side-menu-widget-item {
  padding-top: 1px;
  padding-bottom: 1px;
}

.theme-firebug #callstack-list .dbg-classic-stackframe::after {
  content: "()";
  color: rgb(0, 100, 0);
  font-family: monospace;
}

.theme-firebug #callstack-list .dbg-classic-stackframe-details-url,
.theme-firebug #callstack-list .dbg-classic-stackframe-details-sep,
.theme-firebug #callstack-list .dbg-classic-stackframe-details-line {
  color: blue;
  font-weight: bold;
}

.theme-firebug #callstack-list .side-menu-widget-item {
  margin: 0;
}

.theme-firebug #callstack-list .side-menu-widget-item.selected {
  background-color: lightgoldenrodyellow;
  color: blue;
}

.theme-firebug #callstack-list .side-menu-widget-item:first-child {
  border-top: none;
}

.theme-firebug #callstack-list .side-menu-widget-item :-moz-any(label, hbox) {
  cursor: pointer;
}

/******************************************************************************/
/* Breadcrumbs */

.theme-firebug .breadcrumbs-widget-container .breadcrumbs-widget-item-id {
  display: none;
}

/******************************************************************************/
/* Search Box */

.theme-firebug #debugger-toolbar .devtools-searchinput {
  display: none;
}

